--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^7.3.0"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.4.0"
   }
 }
